--- a/index.html
+++ b/index.html
@@ -29,53 +29,42 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+      <div class="w3-sidebar w3-bar-block w3-white w3-card" style="width:15%">
+          <a href="#" class="w3-bar-item w3-button">Link 1</a> 
+          <a href="#" class="w3-bar-item w3-button">Link 2</a> 
+          <div class="w3-dropdown-hover">
+            <button class="w3-button">Dropdown
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="w3-dropdown-content w3-bar-block">
+              <a href="#" class="w3-bar-item w3-button">Link</a>
+              <a href="#" class="w3-bar-item w3-button">Link</a>
+            </div>
+          </div> 
+          <a href="#" class="w3-bar-item w3-button">Link 3</a> 
+        </div>        
     <div class="hero-wrap js-fullheight">
       <div class="overlay"></div>
       <div class="container-fluid px-0">
       	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-          <div id="heremap" style="width: 640px; height: 480px; background: grey"></div>
+          <div id="heremap" style="width: 1900px; height: 1400px; background: grey"></div>
           <div id="panel" style="width: 600px;"></div>
           <script type="text/javascript" src='js/app.js'></script> 
           <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
-	        	</div>
-	    	</div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row d-flex align-items-center">
-        <div class="col-lg-5 heading-white mb-4 mb-sm-4 mb-lg-0 ftco-animate">
-          <h2>Rate the roads</h2>
-          <p>Make roads safer by rating them !</p>
-        </div>
-        <div class="col-lg-7 p-5 ftco-wrap ftco-animate">
-          <form action="#" class="domain-form d-flex mb-3">
-            <div class="form-group domain-name">
-              <input type="text" class="form-control name px-4" placeholder="Enter your domain name...">
             </div>
-            <div class="form-group domain-select d-flex">
-              <div class="select-wrap">
-                <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                <select name="" id="" class="form-control">
-                  <option value="">.com</option>
-                  <option value="">.net</option>
-                  <option value="">.biz</option>
-                  <option value="">.co</option>
-                  <option value="">.me</option>
-                </select>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Clients</a>
+                <a href="#">Contact</a>
               </div>
-              <input type="submit" class="search-domain btn btn-primary text-center" value="Search">
-            </div>
-          </form>
-          <p class="domain-price mt-2">
-            <span><small>.com</small> $9.75</span> 
-            <span><small>.net</small> $9.50</span> 
-            <span><small>.biz</small> $8.95</span> 
-            <span><small>.co</small> $7.80</span>
-            <span><small>.me</small> $7.95</span>
-          </p>
-        </div>
+	    	</div>
       </div>
     </div>
   <!-- loader -->
@@ -98,6 +87,14 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
-    
+  <script>
+      function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+      }
+      
+      function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+      }
+      </script>
   </body>
 </html>
