--- a/index.html
+++ b/index.html
@@ -35,39 +35,67 @@
   </head>
   <body>
       <div class="w3-sidebar w3-bar-block w3-white w3-card" style="width:15%">
-          <a href="#" class="w3-bar-item w3-button">Link 1</a> 
-          <a href="#" class="w3-bar-item w3-button">Link 2</a> 
+          <h2 class="w3-bar-item w3-blue">App</h2>  
           <div class="w3-dropdown-hover">
-            <button class="w3-button">Dropdown
+            <button class="w3-button">Which area did you feel unsafe in ?
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="w3-dropdown-content w3-bar-block">
-              <a href="#" class="w3-bar-item w3-button">Link</a>
-              <a href="#" class="w3-bar-item w3-button">Link</a>
+              <a href="#" id="myBtn" class="w3-bar-item w3-button" onclick="return theFunction();">Electronic City</a>
+              <a href="#" id="myBtn" class="w3-bar-item w3-button" onclick="return theFunction();">Infosys Drive</a>
+              <a href="#" id="myBtn" class="w3-bar-item w3-button" onclick="return theFunction();">Hewlett Packard Avenue Road</a>
+              <a href="#" id="myBtn" class="w3-bar-item w3-button" onclick="return theFunction();">NH Service Road</a>
+              <a href="#" id="myBtn" class="w3-bar-item w3-button" onclick="return theFunction();">1st Cross Road</a>
+              <a href="#" id="myBtn" class="w3-bar-item w3-button" onclick="return theFunction();">Forum Mall</a>
             </div>
           </div> 
-          <a href="#" class="w3-bar-item w3-button">Link 3</a> 
-        </div>        
+        </div>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Confirmation</h5>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>Do you want to save changes to this document before closing?</p>
+                <p class="text-secondary"><small>If you don't save, your changes will be lost.</small></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+    <script>
+      function theFunction()
+      {
+        var modal = document.getElementById("myModal");
+        var span = document.getElementsByClassName("close")[0];
+        modal.style.display = "block";
+        window.onclick = function(event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      }
+    }
+    </script>
     <div class="hero-wrap js-fullheight">
       <div class="overlay"></div>
       <div class="container-fluid px-0">
       	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-          <div id="heremap" style="width: 1900px; height: 1400px; background: grey"></div>
+          <div id="heremap" style="width: 3000px; height: 1400px; background: grey"></div>
           <div id="panel" style="width: 600px;"></div>
           <script type="text/javascript" src='js/app.js'></script> 
-          <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
-            </div>
-            <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
-              </div>
 	    	</div>
       </div>
     </div>
   <!-- loader -->
+  
 
 
   <script src="js/jquery.min.js"></script>
@@ -87,14 +115,6 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
-  <script>
-      function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-      }
-      
-      function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-      }
-      </script>
+
   </body>
 </html>
