Used Clustering API Did ratings

--- a/before.html
+++ b/before.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-clustering.js"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -48,7 +50,7 @@
         <div class="overlay"></div>
         <div class="container-fluid px-0">
             <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-                <div id="heremap" style="width: 3000px; height: 1400px; background: grey"></div>
+                <div id="heremap" style="width: 3400px; height: 1400px; background: grey"></div>
                 <div id="panel" style="width: 600px;"></div>
                 <script type="text/javascript" src='js/app.js'></script>
             </div>
