--- a/before.html
+++ b/before.html
@@ -56,6 +56,11 @@
             </div>
         </div>
     </div>
+    <button type="button" style="position: absolute;
+                                 top: 10px;
+                                right: 10px;" 
+                            class="btn btn-danger">End</button>
+
     <!-- loader -->
 
 
