--- a/after.html
+++ b/after.html
@@ -43,7 +43,7 @@
 
 <body>
   <div class="w3-sidebar w3-bar-block w3-white w3-card" style="width:15%">
-    <h2 class="w3-bar-item w3-blue">App</h2>
+    <h2 class="w3-bar-item w3-purple">Safe4all</h2>
     <div class="w3-dropdown-hover">
       <button class="w3-button" style="font-size: 18px">Which area did you feel unsafe in ?
         <i class="fa fa-caret-down"></i>
